--- a/src/main/resources/templates/user/layout.html
+++ b/src/main/resources/templates/user/layout.html
@@ -8,8 +8,8 @@
 <head>
     <title>영덕대게태흥</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <meta name="_csrf" th:content="${_csrf.token}"/>
-    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>
+    <meta name="_csrf" th:content="${_csrf?.token}"/>
+    <meta name="_csrf_header" th:content="${_csrf?.headerName}"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link th:href="@{/node_modules/bootstrap/dist/css/bootstrap.min.css}" rel="stylesheet">
     <style>
@@ -80,7 +80,7 @@
   }
 
   $(document).ajaxSend(function (e, xhr, options) {
-    xhr.setRequestHeader('[[${_csrf.headerName}]]', '[[${_csrf.token}]]');
+    xhr.setRequestHeader('[[${_csrf?.headerName}]]', '[[${_csrf?.token}]]');
   });
 
 
