--- a/src/main/resources/templates/user/item/list.html
+++ b/src/main/resources/templates/user/item/list.html
@@ -18,7 +18,7 @@
 
   <div class="d-grid gap-2 d-md-flex justify-content-md-end">
     <a class="btn btn-primary"
-       th:href="@{/items/save}"
+       th:href="@{/items/new}"
        role="button">등록</a>
   </div>
 
