--- a/src/main/resources/templates/user/layout.html
+++ b/src/main/resources/templates/user/layout.html
@@ -28,7 +28,7 @@
         <div class="container">
             <ul class="nav nav-pills nav-fill">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">홈</a>
+                    <a class="nav-link" th:classappend="${#httpServletRequest.requestURI == '/items' ? 'active' : ''}" th:href="@{/items}">홈</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">가지생활</a>
