--- a/src/main/resources/templates/user/chat/view.html
+++ b/src/main/resources/templates/user/chat/view.html
@@ -167,7 +167,8 @@
                                     >
                                         <div class="sent_msg">
                                             <p th:text="${chatMessage.message}">Test which is a new approach to have all solutions</p>
-                                            <span class="time_date" th:text="${#temporals.format(chatMessage.createdDate, 'a hh:mm')}"> 11:01 AM    |    June 9</span></div>
+                                            <span class="time_date" th:text="${#temporals.format(chatMessage.createdDate, 'a hh:mm')}"> 11:01 AM    |    June 9</span>
+                                        </div>
                                     </div>
                                     <div th:if="${!chatMessage.from.equals(currentUser)}"
                                          class="incoming_msg"
@@ -176,29 +177,29 @@
                                         <div class="received_msg">
                                             <div class="received_withd_msg">
                                                 <p th:text="${chatMessage.message}">Test which is a new approach to have all solutions</p>
-                                                <span class="time_date" th:text="${#temporals.format(chatMessage.createdDate, 'a hh:mm')}"> 11:01 AM    |    June 9</span></div>
+                                                <span class="time_date" th:text="${#temporals.format(chatMessage.createdDate, 'a hh:mm')}"> 11:01 AM    |    June 9</span>
+                                            </div>
                                         </div>
                                     </div>
                                 </th:block>
                             </div>
                             <div class="type_msg">
                                 <div class="input_msg_write">
-                                    <input type="text" class="write_msg" placeholder="Type a message"/>
-                                    <button class="msg_send_btn" type="button"><i class="fa fa-paper-plane-o" aria-hidden="true"></i></button>
+                                    <input id="chatMessage" type="text" class="write_msg" placeholder="Type a message"/>
+                                    <button class="msg_send_btn" type="button"><i class="fa-solid fa-paper-plane"></i></button>
                                 </div>
                             </div>
                         </div>
-
                     </div>
-                    <textarea id="chatMessage" class="form-control"></textarea>
                 </div>
             </div>
         </div>
         <script layout:fragment="script" th:inline="javascript">
           const id = document.getElementById("conversation").dataset.id;
           let chatMessage = document.getElementById("chatMessage");
+          var currentUserId  = [[${currentUser.id}]];
 
-          connect(id);
+          connect(id, currentUserId);
 
           chatMessage.addEventListener('keypress', function (event) {
             if (event.key === 'Enter') {
