--- a/src/main/resources/templates/user/item/list.html
+++ b/src/main/resources/templates/user/item/list.html
@@ -32,7 +32,7 @@
 
 
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-        <a class="btn btn-primary"
+        <a class="btn btn-gaji"
            th:href="@{/items/form}"
            role="button">등록</a>
     </div>
