fix: default css 수정

--- a/src/main/resources/templates/user/layout.html
+++ b/src/main/resources/templates/user/layout.html
@@ -35,7 +35,7 @@
 
         <div layout:fragment="content"></div>
 
-        <div class="container bg-light fixed-bottom">
+        <div class="bg-light fixed-bottom border-top">
             <ul class="nav nav-pills nav-fill gaji-pills">
                 <li class="nav-item">
                     <a class="nav-link gaji-link" th:classappend="${#httpServletRequest.requestURI == '/items' ? 'active' : ''}"
