--- a/src/main/resources/static/css/default.css
+++ b/src/main/resources/static/css/default.css
@@ -36,15 +36,12 @@
     box-shadow: 0 0 0 0 rgb(70, 50, 93);
 }
 
-.nav-pills .nav-link {
-    border-radius: 0.25rem;
-}
-
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link
 .gaji-pills {
     color: #fff;
     background-color: #46325d;
+    border-radius: 0;
 }
 
 .nav-pills .nav-link .gaji-pills {
@@ -60,15 +57,15 @@
 }
 
 .gaji-link {
-  color: #0a0e14;
+    color: #0a0e14;
 }
 
 .gaji-link:hover, .gaji-link:focus {
-  text-decoration: none;
-  color: #916dd5;
+    text-decoration: none;
+    color: #916dd5;
 }
 
 .gaji-check-input:checked {
-  background-color: #573d7f;
-  border-color: #573d7f;
+    background-color: #573d7f;
+    border-color: #573d7f;
 }
