feat: logo, image 변경 및 favicon 추가

--- a/src/main/resources/templates/user/item/list.html
+++ b/src/main/resources/templates/user/item/list.html
@@ -13,7 +13,7 @@
         <a th:href="@{/items/{id}(id=${content.id})}" class="text-decoration-none text-dark" role="button">
             <div class="row g-0">
                 <div class="col-md-4">
-                    <img th:src="@{/images/b3.png}" class="img-fluid rounded-start" alt="...">
+                    <img th:src="@{/images/bg3.jpg}" class="img-fluid rounded-start" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
