--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -6,27 +6,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>영덕대게태흥</title>
+    <title>가지마켓</title>
     <link th:href="@{/node_modules/bootstrap/dist/css/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{/css/default.css}" rel="stylesheet">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500&display=swap');
     </style>
 </head>
 <body style="font-family: 'Noto Sans KR', sans-serif;">
 <div class="container">
-    <div class="row">
-        <div class="card col-md-6 offset-md-3 mt-5">
+    <div style="height: 100vh;" class="d-grid gap-2 d-md-flex align-items-center justify-content-center">
+        <div class="card col-md-6 mb-5"  style="width: 22rem;">
             <div class="card-body">
                 <div>
-                    <a th:href="@{/}"><img style="max-width: 140px;" th:src="@{/images/logo.png}" alt="logo"/></a>
+                    <a th:href="@{/}" class="text-decoration-none">🍆</a>
                 </div>
-                <div class="error-details">
-                    죄송합니다.
-                    요청하신 페이지를 찾을 수 없습니다.
-                    뒤로가기 버튼을 눌러 다시 접속 해보시고 계속 에러날 경우 카톡이나 문자로 주문 남겨 주세요♡
+                <div class="error-details mt-5">
+                    죄송합니다.<br>
+                    요청하신 페이지를 찾을 수 없습니다.<br>
+                    뒤로가기를 눌러주세요.<br>
                 </div>
-                <div class="mt-5">
-                    <a href="javascript:history.back();" class="btn btn-outline-primary">뒤로가기</a>
+                <div class="mt-5 d-grid gap-2 d-md-flex justify-content-md-end">
+                    <a href="javascript:history.back();" class="btn btn-gaji">뒤로가기</a>
                 </div>
             </div>
         </div>
