--- a/src/main/resources/templates/user/layout.html
+++ b/src/main/resources/templates/user/layout.html
@@ -38,19 +38,19 @@
         <div class="bg-light fixed-bottom border-top">
             <ul class="nav nav-pills nav-fill gaji-pills">
                 <li class="nav-item">
-                    <a class="nav-link gaji-link" th:classappend="${#httpServletRequest.requestURI == '/items' ? 'active' : ''}"
+                    <a class="nav-link gaji-link"  th:classappend="${#strings.startsWith(#httpServletRequest.requestURI, '/items') ? 'active' : ''}"
                        th:href="@{/items}">홈</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link gaji-link" th:classappend="${#httpServletRequest.requestURI == '/lives' ? 'active' : ''}"
+                    <a class="nav-link gaji-link" th:classappend="${#strings.startsWith(#httpServletRequest.requestURI, '/lives') ? 'active' : ''}"
                        th:href="@{/lives}">가지생활</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link gaji-link" th:classappend="${#httpServletRequest.requestURI == '/chat' ? 'active' : ''}"
+                    <a class="nav-link gaji-link" th:classappend="${#strings.startsWith(#httpServletRequest.requestURI, '/chat') ? 'active' : ''}"
                        th:href="@{/chat}">채팅</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link gaji-link" th:classappend="${#httpServletRequest.requestURI == '/myInfo' ? 'active' : ''}"
+                    <a class="nav-link gaji-link" th:classappend="${#strings.startsWith(#httpServletRequest.requestURI, '/myInfo') ? 'active' : ''}"
                        th:href="@{/myInfo}">나의가지</a>
                 </li>
             </ul>
