feat: 프로필 이미지 추가 기능

--- a/src/main/resources/templates/user/layout.html
+++ b/src/main/resources/templates/user/layout.html
@@ -10,9 +10,9 @@
         <meta name="_csrf" th:content="${_csrf?.token}"/>
         <meta name="_csrf_header" th:content="${_csrf?.headerName}"/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <link th:href="@{/node_modules/bootstrap/dist/css/bootstrap.min.css}" rel="stylesheet">
-        <link th:href="@{/node_modules/@fortawesome/fontawesome-free/css/all.min.css}" rel="stylesheet">
-        <link th:href="@{/css/default.css}" rel="stylesheet">
+        <link th:href="@{/node_modules/bootstrap/dist/css/bootstrap.min.css}" rel="stylesheet" />
+        <link th:href="@{/node_modules/bootstrap-icons/font/bootstrap-icons.css}" rel="stylesheet" />
+        <link th:href="@{/css/default.css}" rel="stylesheet" />
     </head>
     <body class="d-flex flex-column pb-5">
         <header class="border-bottom bg-light sticky-top mb-3">
