--- a/src/main/resources/templates/user/myInfo/view.html
+++ b/src/main/resources/templates/user/myInfo/view.html
@@ -8,30 +8,30 @@
     <body>
 
         <div class="container py-5" layout:fragment="content">
-            <div class="d-flex justify-content-between">
+            <a class="text-decoration-none" th:href="@{/myInfo/edit}">프로필 수정</a>
+            <div class="d-flex justify-content-center">
                 <div>
-                    <img src="" alt=""/>
+                    <img th:src="@{__${currentUser.picture?.thumbnailSrc}__}" class="rounded-circle" style="width: 100px; height: 100px;" alt=""/>
                     <div th:text="${currentUser.nickname}">닉네임</div>
                 </div>
-                <a class="text-decoration-none" th:href="@{/myInfo/edit}">프로필 보기</a>
             </div>
             <h5>나의 거래</h5>
             <div>
                 <a href="#" class="text-decoration-none d-flex align-items-center p-1">
                     <div style="flex-basis: 15px;">
-                        <i class="fa-regular fa-receipt"></i>
+                        <i class="bi bi-receipt"></i>
                     </div>
                     <div class="ms-2">판매내역</div>
                 </a>
                 <a href="#" class="text-decoration-none d-flex align-items-center p-1">
                     <div style="flex-basis: 15px;">
-                        <i class="fa-regular fa-bag-shopping"></i>
+                        <i class="bi bi-bag"></i>
                     </div>
                     <div class="ms-2">구매내역</div>
                 </a>
                 <a href="#" class="text-decoration-none d-flex align-items-center p-1">
                     <div style="flex-basis: 15px;">
-                        <i class="fa-regular fa-heart"></i>
+                        <i class="bi bi-heart"></i>
                     </div>
                     <div class="ms-2">관심목록</div>
                 </a>
@@ -40,7 +40,7 @@
             <div>
                 <a href="#" class="text-decoration-none d-flex align-items-center p-1">
                     <div style="flex-basis: 15px;">
-                        <i class="fa-regular fa-receipt"></i>
+                        <i class="bi bi-file-text"></i>
                     </div>
                     <div class="ms-2">동네생활 글/댓글</div>
                 </a>
