feat: 가지생활 form, view 추가

--- a/src/main/resources/templates/user/life/view.html
+++ b/src/main/resources/templates/user/life/view.html
@@ -10,10 +10,8 @@
 <div class="container py-5" layout:fragment="content">
 
     <div class="card mb-3">
-        <span th:text="${item.title}"></span>
-        <span th:text="${item.createdDate}"></span>
-        <span th:text="${item.price}"></span>
-        <span th:text="${item.views}"></span>
+        <span th:text="${life.category}"></span>
+        <span th:text="${life.contents}"></span>
     </div>
 
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
